--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,7 @@ title: Mannerism's Blog
 email: dearmannerism@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
   A collection of attempts to not fall into mannerism. 
-baseurl: "blog" # the subpath of your site, e.g. /blog
+baseurl: "mannerismblog" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: N/A
 github_username:  mannerism
