--- a/_config.yml
+++ b/_config.yml
@@ -22,8 +22,8 @@ title: Mannerism's Blog
 email: dearmannerism@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
   A collection of attempts to not fall into mannerism.
-baseurl: "blog/" # the subpath of your site, e.g. /blog
-url: "https://mannerism.github.io/" # the base hostname & protocol for your site, e.g. http://example.com
+url: "https://mannerism.github.io" # the base hostname & protocol for your site, e.g. http://example.com
+baseurl: "/blog/" # the subpath of your site, e.g. /blog
 twitter_username: N/A
 github_username: mannerism
 
