--- a/_config.yml
+++ b/_config.yml
@@ -30,7 +30,7 @@ github_username: mannerism
 # Build settings
 theme: minima #https://rubygems.org/ and search jekyll-theme for more themes.
 minima:
-  skin: dark
+  skin: solarized-light
 plugins:
   - jekyll-feed
 
